# soca-api

./: .gitignore  alembic.ini  demo.ipynb  docker-compose.yaml  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 12d73f82b953_create_table_dataset.py  57c700394c4e_create_table_datasets.py  c185de16327e_add_table_datasets.py
make/: Makefile.test
scripts/: dataset_stub.py
src/: conftest.py  main.py
src/api/: __init__.py
src/api/datasets/: router.py  schemas.py
src/api/trainings/: router.py  schemas.py
src/common/: config.py  domain.py  repository.py  repository_test.py  repositry_mock.py  schemas.py  schemas_test.py  service.py  service_test.py  types.py  utils.py
src/common/base/: __init__.py  domain.py  repository.py  service.py
src/common/base/entities/: __init__.py
src/common/domains/datasets/: adapter.py  entity.py  entity_test.py  repository.py
src/common/entities/: __init__.py
src/common/models/: __init__.py  dataset.py
src/common/utils/: __init__.py  model_orm_utils.py  page_request_utils.py  repository_utils.py
src/core/: domain.py
src/core/datasets/: entity.py  entity_test.py  exceptions.py  repository.py
tests/: __init__.py  conftest.py
tests/.ipynb_checkpoints/: test_one-checkpoint.py
